[package]
name = "ke06z4-pac"
version = "0.1.0"
authors = ["Jonathan Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "PAC for NXP Kinetis MKE06Zx microcontrollers"
license = "CC0"
repository="https://github.com/thejpster/ke06z4-pac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]
